[project]
name = "magiccube"

[tool.isort]
profile = "black"
lines_after_imports = 2
honor_noqa = true

[tool.black]
line-length = 119

[tool.poetry]
name = "magiccube"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "~1.26"
immutabledict = "~3.0"
Pillow = "~9.4"
aggdraw = "~1.3"
promise = "~2.3"
antlr4-python3-runtime = "~4.9"
yeetlong = { git = "https://github.com/guldfisk/yeetlong.git" }
orp = { git = "https://github.com/guldfisk/orp.git" }
mtgorp = { git = "https://github.com/guldfisk/mtgorp.git" }
mtgimg = { git = "https://github.com/guldfisk/mtgimg.git" }
evolution = { git = "https://github.com/guldfisk/evolution.git" }
proxypdf = { git = "https://github.com/guldfisk/proxypdf.git" }


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
